# Parall

./: CMakeLists.txt  CMakeProject6.cpp  CMakeProject6.h  README.md  main.cpp  makefile
